infra/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: supplier-service
spec:
  selector:
    app: supplier-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3001
  type: NodePort
