infra/k8s/supplier-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: supplier-service
  namespace: supplier
spec:
  selector:
    app: supplier-service
  ports:
  - port: 80
    targetPort: 3000
  type: ClusterIP
